--- a/bio.html
+++ b/bio.html
@@ -7,7 +7,9 @@
   </head>
   <body>
 <h1>Mateus' Bio</h1>
-<p>One of the things I like to be know as is someone who enjoys a good video game
-  and someone who is funny.</p> 
+<content class="content"> One of the things I like to be known as is someone who enjoys a good video game
+  and someone who is clam, cool and collective. I know I am not perfect but that does not stop me from
+trying my best at being a good person. One thing I that people learn about me is that I am a catholic and
+it's one thing which is very important to me.</content>
   </body>
 </html>
