--- a/bio.html
+++ b/bio.html
@@ -1,15 +1,30 @@
 <!DOCTYPE html>
+<!-- Mateus Macedo 15413043 -->
+
 <html>
+
+
   <head>
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+    <!-- google API font -->
     <meta charset="utf-8">
     <title>bio</title>
     <link rel="stylesheet" href="css/styles.css">
   </head>
+
   <body>
+    <a href="index.html"> <img src= "pictures/home.png" alt="home" class="homepicture"/></a>
+
+
 <h1>Mateus' Bio</h1>
-<content class="content"> One of the things I like to be known as is someone who enjoys a good video game
+
+<br/>
+<br/>
+<p> One of the things I like to be known as is someone who enjoys a good video game
   and someone who is clam, cool and collective. I know I am not perfect but that does not stop me from
 trying my best at being a good person. One thing I that people learn about me is that I am a catholic and
-it's one thing which is very important to me.</content>
+it's one thing which is very important to me.</p>
+<!-- paragraph, text with here is diplayed like a paragraph -->
+
   </body>
 </html>
